solvede overflow error

--- a/src/views/JobInfo/jobinfo.css
+++ b/src/views/JobInfo/jobinfo.css
@@ -95,6 +95,8 @@
 @media screen and (max-width:500px) {
     .jobs-info-container{
     margin-left: 0px;
+    width: 100vw;
+    overflow-x: hidden;
  }
 
 }
